# vibeforcer

./: .gitignore  .gitmodules  README.md  baselines.json  entities.json  mempalace.yaml  pyproject.toml
.sisyphus/plans/: modularity-observability.md
docs/: architecture.md  cutover.md  debugging.md  extension_guide.md  hook-state-test-matrix.md  rules_reference.md
fixtures/: configchange_disable_hooks.json  configchange_safe.json  pretool_assertion_roulette.json  pretool_baseline_inflate.json  pretool_datetime_fallback.json  pretool_default_swallow.json  pretool_design_tokens.json  pretool_fe_linter.json  pretool_fixture_outside_conftest.json  pretool_git_no_verify.json  pretool_git_stash.json  pretool_linter_config.json  pretool_python_any.json  pretool_python_source_bash.json  pretool_python_todo.json  pretool_quality_test_path.json  pretool_read_partial.json  pretool_rust_unwrap.json  pretool_shell_bypass.json  pretool_silent_except.json  pretool_silent_none.json  pretool_test_loop_assert.json  pretool_test_sleep.json  pretool_ts_ignore.json  pretool_ts_todo.json  sessionstart_startup.json  stop_preexisting.json
fixtures/codex/: posttool_bash.json  pretool_bash_git_no_verify.json  pretool_bash_rm_rf.json  session_start.json  stop_basic.json  user_prompt_submit.json
fixtures/opencode/: permission_asked.json  pretool_bash_git_no_verify.json  pretool_edit_python_todo.json  pretool_write_protected.json  (+1 more)
tests/: __init__.py  conftest.py  support.py  test_adapters.py  test_ast_rules.py  test_cli.py  test_duplicate_detector.py  test_engine.py  test_enrichment.py  test_error_and_config_rules.py  test_hook_state_spec.py  test_langgraph_rules.py  test_regex_targets.py  test_search_boundary.py  test_stats.py  test_trace.py
(+99 files in other folders)
