[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vibeforcer"
version = "1.1.0"
description = "Global CLI guardrails engine for AI coding agents — Claude Code, Codex, OpenCode"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "trav" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "typing-extensions>=4.15.0",
]

[project.scripts]
vibeforcer = "vibeforcer.cli:safe_main"
vfc = "vibeforcer.cli:safe_main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vibeforcer = ["resources/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.basedpyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
include = ["src", "tests"]
extraPaths = ["src", "."]
typeCheckingMode = "strict"

[tool.pyrefly]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
include = ["src", "tests"]
search_path = ["src", "."]
disable-search-path-heuristics = true
typeCheckingMode = "strict"

[dependency-groups]
dev = [
    "basedpyright>=1.39.0",
    "pytest>=9.0.3",
    "pytest-xdist>=3.8.0",
    "ty>=0.0.29",
]
